--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,3 +1,3 @@
 [defaults]
 inventory = ./inventory.yaml
-private_key_file = ~/.ssh/terraform-ansible-wsl
+private_key_file = ~/.ssh/terraform-ansible
