--- a/global_vars.yaml
+++ b/global_vars.yaml
@@ -1,5 +1,10 @@
 ---
 execute_docker_role: true
 execute_swarm_role: true
-execute_traefik_role: false
-execute_portainer_role: false
+execute_traefik_role: true
+execute_portainer_role: true
+execute_postgres_role: true
+execute_pgadmin_role: true
+execute_redis_role: true
+execute_n8n_role: false
+execute_codechat_role: false
