--- a/roles/traefik/tasks/main.yaml
+++ b/roles/traefik/tasks/main.yaml
@@ -1,26 +1,13 @@
-- name: Instalar pacote jsondiff
-  pip:
-    name: jsondiff
-    state: present
-
-- name: Copy traefik configuration
-  copy:
-    src: /mnt/c/Users/caloi/ansible-swarm-semaphore/roles/traefik/templates/traefik.yaml.j2
-    dest: /home/ansible/traefik.yaml.j2
-
-- name: Render Traefik configuration
+- name: Gerar arquivo de configuração do Traefik a partir do template
   template:
-    src: /mnt/c/Users/caloi/ansible-swarm-semaphore/roles/traefik/templates/traefik.yaml.j2
-    dest: /home/ansible/traefik.yaml
+    src: "traefik.yaml.j2"
+    dest: "/tmp/traefik.yaml"
 
-# - name: Ensure Traefik stack is deployed
-#   docker_stack:
-#     state: present
-#     name: traefik
-#     compose:
-#       - "/home/ansible/traefik.yaml.j2"
-#     prune: yes
-#     resolve_image: always
-
-- name: Deploy Traefik stack
-  command: docker stack deploy --prune --resolve-image always -c /path/to/traefik.yaml traefik
+- name: Ensure Traefik stack is deployed
+  docker_stack:
+    state: present
+    name: traefik
+    compose:
+      - "/tmp/traefik.yaml"
+    prune: yes
+    resolve_image: always
