--- a/global_vars.yaml
+++ b/global_vars.yaml
@@ -6,7 +6,7 @@ execute_portainer_role: true
 
 execute_portainer_stack_postgres: false
 
-execute_postgres_role: true
+execute_postgres_role: false
 execute_pgadmin_role: false
 execute_redis_role: false
 execute_n8n_role: false
